<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/perimeterResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/perimeterResult"
        app:layout_constraintBaseline_toBaselineOf="@+id/perimeterTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/perimeterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/perimeterLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/areaTextView" />

    <TextView
        android:id="@+id/areaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/areaLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightTextView" />

    <EditText
        android:id="@+id/heightEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/heightEdit"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/heightTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/heightLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widthTextView" />

    <TextView
        android:id="@+id/widthTextView"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="101dp"
        android:text="@string/widthLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/widthEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/widthEdit"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/widthTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/areaResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/areaResult"
        app:layout_constraintBaseline_toBaselineOf="@+id/areaTextView"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>